Fix tests and checkstyles